# PWP3D

./: .CMakeLists.txt.swp  CMakeLists.txt  Perseus.sln  README.md
Application/: CMakeLists.txt  PerseusLibTest.cpp  PerseusLibTest.cpp.autosave
Application/Utils/: Timer.h
CMakeModules/: FindEigen3.cmake  FindOpenCV2.cmake  FindTinyXML2.cmake
Files/CameraCalibration/: 900nc.cal  Kinect.cal
Files/Others/: heaviside.txt
Perseus/: CMakeLists.txt  Perseus.vcxproj  Perseus.vcxproj.filters  PerseusLibTest.cpp
PerseusLib/: CMakeLists.txt  PWP3DConfig.cmake.in  PWP3DConfigVersion.cmake.in  PerseusLib.h  PerseusLib.vcxproj  PerseusLib.vcxproj.filters  config.h.in
PerseusLib/CUDA/: CUDAConvolution.cu  CUDAConvolution.h  CUDADT.cu  CUDADT.h  CUDAData.h  CUDADefines.h  CUDAEF.cu  CUDAEF.h  CUDAEngine.cu  CUDAEngine.h  CUDARenderer.cu  CUDARenderer.h  CUDAScharr.cu  CUDAScharr.h  CUDAUtils.cu  CUDAUtils.h
PerseusLib/Objects/: HistogramVarBin.h  ImageRender.h  IterationConfiguration.h  Object3D.h  Object3DParams.h  Pose3D.h  StepSize3D.h  View3D.h  View3DParams.h
PerseusLib/Optimiser/EFs/: EFStandard.cpp  EFStandard.h  IEnergyFunction.h
PerseusLib/Optimiser/Engine/: OptimisationEngine.cpp  OptimisationEngine.h
PerseusLib/Others/: PerseusLibDefines.h
PerseusLib/Primitives/: ImagePerseus.h  PixelUCHAR4.h  Vector2D.h  Vector3D.h  Vector4D.h
PerseusLib/Renderer/Engine/: DrawingEngine.cpp  DrawingEngine.h  DrawingPrimitives.cpp  DrawingPrimitives.h
PerseusLib/Renderer/Model/: Model.cpp  Model.h  ModelFace.h  ModelGroup.cpp  ModelGroup.h  ModelH.cpp  ModelH.h  ModelVertex.h  ModelVertexH.h
PerseusLib/Renderer/Objects/: Renderer3DObject.h  Renderer3DView.h
PerseusLib/Renderer/Primitives/: Camera3D.h  Quaternion.cpp  Quaternion.h
PerseusLib/Renderer/Transforms/: CameraCoordinateTransform.cpp  CameraCoordinateTransform.h  CoordinateTransform.cpp  CoordinateTransform.h  ObjectCoordinateTransform.h
PerseusLib/Utils/: Debug.h  FileUtils.cpp  FileUtils.h  Heaviside.h  HistogramEngine.cpp  HistogramEngine.h  ImageUtils.cpp  ImageUtils.h  MathUtils.cpp  MathUtils.h  VisualisationEngine.cpp  VisualisationEngine.h
